--- a/guide.html
+++ b/guide.html
@@ -3212,17 +3212,17 @@ curl -X POST http://localhost:3000/api/v1/integrations/sync \
                         </div>
                         <p class="text-sm text-slate-500 mb-6">For educational purposes only. Hack responsibly.</p>
                         <div class="flex items-center justify-center gap-4">
-                            <a href="#"
+                            <a href="https://www.youtube.com/@GethukSecurity" target="_blank"
+                                class="w-10 h-10 rounded-xl bg-white/5 border border-white/10 flex items-center justify-center text-slate-400 hover:text-white hover:bg-red-500/20 hover:border-red-500/30 transition-all duration-300">
+                                <i class="ri-youtube-fill text-lg"></i>
+                            </a>
+                            <a href="https://www.instagram.com/gethuksecurity/" target="_blank"
+                                class="w-10 h-10 rounded-xl bg-white/5 border border-white/10 flex items-center justify-center text-slate-400 hover:text-white hover:bg-pink-500/20 hover:border-pink-500/30 transition-all duration-300">
+                                <i class="ri-instagram-fill text-lg"></i>
+                            </a>
+                            <a href="https://github.com/gethuksec" target="_blank"
                                 class="w-10 h-10 rounded-xl bg-white/5 border border-white/10 flex items-center justify-center text-slate-400 hover:text-white hover:bg-white/10 hover:border-accent-blue/30 transition-all duration-300">
                                 <i class="ri-github-fill text-lg"></i>
-                            </a>
-                            <a href="#"
-                                class="w-10 h-10 rounded-xl bg-white/5 border border-white/10 flex items-center justify-center text-slate-400 hover:text-white hover:bg-white/10 hover:border-accent-blue/30 transition-all duration-300">
-                                <i class="ri-twitter-x-fill text-lg"></i>
-                            </a>
-                            <a href="#"
-                                class="w-10 h-10 rounded-xl bg-white/5 border border-white/10 flex items-center justify-center text-slate-400 hover:text-white hover:bg-white/10 hover:border-accent-blue/30 transition-all duration-300">
-                                <i class="ri-discord-fill text-lg"></i>
                             </a>
                         </div>
                     </div>
